# Python_MTEB_v1

./: MTEB-V1_STRATEGY_SPEC.md  README.md  main.py  pyproject.toml
app/: streamlit_app.py
scripts/: run_analysis.py  run_backtest.py
src/mteb_v1/: __init__.py  backtest.py  config.py  data_loader.py  indicators.py  risk.py  strategy.py  streamlit_charts.py  structure.py  visualization.py
src/mteb_v1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_backtest.py  test_data_loader.py  test_indicators.py  test_risk.py  test_strategy.py  test_streamlit_charts.py  test_structure.py  test_visualization.py
